Update app name and navigation tabs

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "JournalApp",
-    "slug": "JournalApp",
+    "name": "GearMore",
+    "slug": "GearMore",
     "plugins": [
       [
         "expo-image-picker",
