--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-firebase/database": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
-    "@react-navigation/bottom-tabs": "^6.5.10",
-    "@react-navigation/drawer": "^6.6.5",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "@react-navigation/stack": "^6.3.19",
@@ -26,11 +25,11 @@
     "react": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
