--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GearMore",
+  "name": "journalapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,30 +10,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-firebase/app": "^18.7.1",
-    "@react-native-firebase/auth": "^18.7.1",
-    "@react-native-firebase/database": "^18.7.1",
-    "@react-native-google-signin/google-signin": "^10.1.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/database": "^18.5.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native-stack": "^6.9.15",
+    "@react-navigation/stack": "^6.3.19",
     "expo": "^49.0.21",
-    "expo-file-system": "~15.6.0",
-    "expo-image-picker": "~14.5.0",
-    "firebase": "^10.7.1",
+    "expo-file-system": "~15.4.4",
+    "expo-image-picker": "~14.3.2",
+    "firebase": "^10.5.0",
     "react": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-native": "0.73.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.1",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
