Revert "Add package and change wording"
This reverts commit ab7fb5252283c6a9ec5c592254b1b5d07e2e7208.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "@react-navigation/stack": "^6.3.19",
-    "expo": "^49.0.21",
+    "expo": "~49.0.13",
     "expo-file-system": "~15.4.4",
     "expo-image-picker": "~14.3.2",
     "firebase": "^10.5.0",
