--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-export-namespace-from": "^7.23.4",
     "@expo/vector-icons": "^13.0.0",
+    "@npmcli/fs": "^3.1.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
@@ -30,7 +32,9 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "uglify-js": "^3.17.4",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
